# cac

./: .gitignore  .test.cac.kate-swp  CMakeLists.txt  Makefile  README.md  core.8307  core.8515  hello.cac  test.cac  text.txt
src/: classes.cpp  classes.h  environment.cpp  environment.h  executing.cpp  executing.h  expressions.cpp  expressions.h  function.cpp  function.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  list.cpp  list.h  parser.cpp  parser.h  resolver.cpp  resolver.h  statements.cpp  statements.h
stuff/trees-gen/: README.md  go.mod  main.go  trees-gen
stuff/trees-gen/dir/: output.h  sdfa.h
stuff/trees-gen/dir/test/: main.cpp  main.h
tests/: test.txt  test10.cac  test11.cac  test2.cac  test3.cac  test4.cac  test5.cac  test6.cac  test7.cac  test8.cac  test9.cac
